--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
                     <details>
                       <summary></summary>
                     <h3>HTML</h3>
-<pre class="language-markup"><code>&lt;input name='users-list-tags'></code></pre>
+<pre class="language-markup"><code>&lt;input name='users-list-tags' value='abatisse2@nih.gov, Justinian Hattersley'></code></pre>
                     <h3>JAVASCRIPT</h3>
                     <script>renderPRE(document.currentScript, "users-list")</script>
                     <h3>CSS</h3>
@@ -988,7 +988,7 @@
                             <use class="logo-use" xlink:href="#codepen-logo"/>
                         </svg>
                     </a>
-                    <input name='users-list-tags' value='3'>
+                    <input name='users-list-tags' value='abatisse2@nih.gov, Justinian Hattersley'>
                 </aside>
             </section>
 
