fixed demo page wrong script src

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             }(document)
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="dist/tagify.min.js"></script>
+        <script src="dist/jQuery.tagify.min.js"></script>
         <script src="https://unpkg.com/@yaireo/dragsort"></script>
 
         <script>
