[bugfix] mix-mode fixes for complex whiteilst where values are ids and another property is used as the text of the tags/suggestions

--- a/test/test.html
+++ b/test/test.html
@@ -113,7 +113,7 @@
                 <textarea name='simple-mix' placeholder="type something">mixed-mode [[example]] with [[{"value":"tags"}]].</textarea>
 
                 <textarea name='mix' class='tagify-editor' placeholder="type something">
-                  [[{"value":101, "text":"  cartman  ", "title":"Eric Cartman", "prefix":"@"}]] and [[{"value":500, "text":"cartman", "title":"xxx", "prefix":"@", "readonly":true}]] [[kyle]] do not know [[homer simpson]] because he's a
+                  [[{"value":200, "text":"  cartman  ", "title":"Eric Cartman", "prefix":"@"}]] and [[{"value":1000, "text":"cartman", "title":"xxx", "prefix":"@", "readonly":true}]] [[kyle]] do not know [[homer simpson]] because he's a
 and [[{"value": "readonly", "readonly":true}]]
                 </textarea>
             </section>
@@ -455,24 +455,80 @@ and [[{"value": "readonly", "readonly":true}]]
 
   //////////////////////////////
 
+    var whitelist_1 = [
+    {
+        value: 100,
+        text : 'kenny',
+        title : 'Kenny McCormick'
+    },
+    {
+        value: 200,
+        text : 'cartman',
+        title : 'Eric Cartman'
+    },
+    {
+        value: 300,
+        text : 'kyle',
+        title : 'Kyle Broflovski'
+    },
+    {
+        value: 400,
+        text : 'token',
+        title : 'Token Black'
+    },
+    {
+        value: 500,
+        text : 'jimmy',
+        title : 'Jimmy Valmer'
+    },
+    {
+        value: 600,
+        text : 'butters',
+        title : 'Butters Stotch'
+    },
+    {
+        value: 700,
+        text : 'stan',
+        title : 'Stan Marsh'
+    },
+    {
+        value: 800,
+        text : 'randy',
+        title : 'Randy Marsh'
+    },
+    {
+        value: 900,
+        text : 'Mr. Garrison',
+        title : 'POTUS'
+    },
+    {
+        value: 1000,
+        text : 'Mr. Mackey',
+        title : "M'Kay"
+    }
+  ]
+
+  var whitelist_2 = ['Homer simpson', 'Marge simpson', 'Bart', 'Lisa', 'Maggie', 'Mr. Burns', 'Ned', 'Milhouse', 'Moe'];
+
+
   var input = document.querySelector('[name=mix]'),
       // init Tagify script on the above inputs
       tagify = new Tagify(input, {
           tagTextProp      : 'text',
+          //enforceWhitelist : true, // <-- see below post-init change
           mode             : 'mix',  // <--  Enable mixed-content
           pattern          : /@|#/,  // <--  Tag words which start with @ or # (can be a String instead of Regex)
-          duplicates       : true,
-          whitelist        : [       // <--  Set the initial whitelist, which will dynamically change as you type (see "input" event below)
-            { value:'cartman', title:'Eric Cartman', class:'borderd-blue', prefix:'@' },
-            { value:"cartman", id:500, title:"xxx", prefix:'@' },
-            { value:'kyle', title:'Kyle Broflovski', prefix:'@' },
-            { value:'Homer simpson', prefix:'#' }
+          duplicates       : false,
+          whitelist        : [       // <--  Set the initial whitelist, which will dynamically changed as you type (see "input" event below)
+            ...whitelist_1,
+            ...whitelist_2
           ],
           dropdown   : {
               enabled : 1,
               maxItems: 20,
-              position: "text",
-              highlightFirst: true
+              position: 'text',
+              highlightFirst: true,
+              mapValueTo: 'text'
           },
           callbacks        : {
             add    : e=>console.log("ADD: ", e.detail),  // callback when adding a tag
@@ -480,50 +536,8 @@ and [[{"value": "readonly", "readonly":true}]]
           }
       })
 
-  var whitelist_1 = [
-      {
-          value : 'kenny',
-          title : 'Kenny McCormick'
-      },
-      {
-          value : 'cartman',
-          title : 'Eric Cartman'
-      },
-      {
-          value : 'kyle',
-          title : 'Kyle Broflovski'
-      },
-      {
-          value : 'token',
-          title : 'Token Black'
-      },
-      {
-          value : 'jimmy',
-          title : 'Jimmy Valmer'
-      },
-      {
-          value : 'butters',
-          title : 'Butters Stotch'
-      },
-      {
-          value : 'stan',
-          title : 'Stan Marsh'
-      },
-      {
-          value : 'randy',
-          title : 'Randy Marsh'
-      },
-      {
-          value : 'Mr. Garrison',
-          title : 'POTUS'
-      },
-      {
-          value : 'Mr. Mackey',
-          title : "M'Kay"
-      }
-  ]
-
-  var whitelist_2 = ['Homer simpson', 'Marge simpson', 'Bart', 'Lisa', 'Maggie', 'Mr. Burns', 'Ned', 'Milhouse', 'Moe'];
+    // POST-INIT change:
+    tagify.settings.enforceWhitelist = true
 
   // A good place to pull server suggestion list according to the prefix/value
   tagify.on('input', async function(e){
@@ -540,7 +554,8 @@ and [[{"value": "readonly", "readonly":true}]]
           newWhitelist = whitelist_2
 
       if( newWhitelist ){
-        tagify.settings.whitelist.splice(0, newWhitelist.length, ...newWhitelist)
+        tagify.settings.whitelist.length = 0;
+        tagify.settings.whitelist.push(...newWhitelist)
       }
 
       if( e.detail.value.length >= tagify.settings.dropdown.enabled )
