demo page minor changes to head tag children

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Tagify - demo</title>
+        <title>Tagify - Tags input Component</title>
         <meta name="description" content="Converts HTML input/textarea into Tags component">
         <meta name="author" content="Yair Even-Or">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="keywords" content="tag, tags, tagging, tagify, javascript, component, web">
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔖</text></svg>">
         <link rel="stylesheet" href="dist/tagify.css">
         <link rel="stylesheet" href="https://unpkg.com/@yaireo/dragsort/dist/dragsort.css" media="print" onload="this.media='all'">
         <style>
