--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                         Note that <code>whitelist</code> &amp; <code>blacklist</code> may also be set on to <i>Tagify</i> as <code>data-</code> attributes on the input tag itself
                         as a list of tags seperated by the same delimeter defined in the Tagify's configuration. Default is comma (<code>,</code>)
                     </p>
-                    <p>As text is typed, the <code>onInput</code> Tagify event is fired, on each key stroke. Reseting the current whitelist and fecthing a new one (from <code>mockAjax()</code>)</p>
+                    <p>As text is typed, the <code>onInput</code> Tagify event is fired, on each key stroke. Reseting the current whitelist and fetching a new one (from <code>mockAjax()</code>)</p>
                     <p>In real-life scenarios, a developer might wish to use different <em>whitelists</em> suggested to the user, according to the typed text, asusming the possibilities are too large to load at-once as the inital <em>whitelist</em>.</p>
 
                     <details>
