--- a/test/test.html
+++ b/test/test.html
@@ -159,9 +159,9 @@ and [[{"value": "readonly", "readonly":true}]]
   document.forms[0].reset()
 
   window.tagified = {
-    "mix"               : 1,
+    "mix"               : 0,
     "markdown"          : 0,
-    "basic"             : 1,
+    "basic"             : 0,
     "textarea"          : 0,
     "manual-suggestions": 0,
     "outside-of-the-box": 0,
@@ -169,7 +169,7 @@ and [[{"value": "readonly", "readonly":true}]]
     "extra-properties"  : 0,
     "readonly"          : 0,
     "readonly-mixed"    : 0,
-    "mode-select"       : 0,
+    "mode-select"       : 1,
   };
 
   (function(){
@@ -1094,14 +1094,15 @@ tagified["mode-select"] && (function(){
 
     // bind events
     tagify.on('add', onAddTag)
+          .on('change', console.log)
     tagify.DOM.input.addEventListener('focus', onSelectFocus)
 
     function onAddTag(e){
-        console.log(e.detail)
+      //  console.log(e.detail)
     }
 
     function onSelectFocus(e){
-        console.log(e)
+      //  console.log(e)
     }
 })()
 </script>
