--- a/test/test.html
+++ b/test/test.html
@@ -18,7 +18,9 @@
             form > section{ margin-bottom: 2em; }
 
             .tagify+input, .tagify+textarea {
-                display: initial!important;
+                position: initial !important;
+                left: 0 !important;
+                transform: none !important;
                 width: 100%;
                 margin-top: .2em;
                 min-height: 11ch;
