improved filtering suggestions for "select" mode: if a tag was chosen, do not filter by value until the tag is erased or was edited. if tag is edited so all characters removed, then the field blured - the tag is now removed. Also when editing the text and bluring, the tag is updated.

--- a/test/test.html
+++ b/test/test.html
@@ -1087,8 +1087,10 @@ tagified["mode-select"] && (function(){
         tagify = new Tagify(input, {
             mode : "select",
             tagTextProp : 'username',
-            whitelist: [{ "id":"1", "value": 1, "username":"First option" },{ "id":"2", "value": 2, "username":"Second option" }],
-            keepInvalidTags: false,
+            whitelist: [
+                { "id":"1", "value": 1, "username":"First option" },
+                { "id":"2", "value": 2, "username":"Second option" }
+            ],
             dropdown: {
                 mapValueTo: 'username',
                 searchKeys: ['username'],
