--- a/test/test.html
+++ b/test/test.html
@@ -161,7 +161,7 @@ and [[{"value": "readonly", "readonly":true}]]
   document.forms[0].reset()
 
   window.tagified = {
-    "mix"               : 0,
+    "mix"               : 1,
     "markdown"          : 0,
     "basic"             : 0,
     "textarea"          : 0,
@@ -171,7 +171,7 @@ and [[{"value": "readonly", "readonly":true}]]
     "extra-properties"  : 0,
     "readonly"          : 0,
     "readonly-mixed"    : 0,
-    "mode-select"       : 1,
+    "mode-select"       : 0,
   };
 
   (function(){
@@ -538,6 +538,7 @@ and [[{"value": "readonly", "readonly":true}]]
           }
       })
 
+    tagify.loading(true)
     // POST-INIT change:
     tagify.settings.enforceWhitelist = true
 
