--- a/test/test.html
+++ b/test/test.html
@@ -161,13 +161,13 @@ and [[{"value": "readonly", "readonly":true}]]
   document.forms[0].reset()
 
   window.tagified = {
-    "mix"               : 1,
+    "mix"               : 0,
     "markdown"          : 0,
-    "basic"             : 1,
+    "basic"             : 0,
     "textarea"          : 0,
     "manual-suggestions": 0,
     "outside-of-the-box": 0,
-    "advance-options"   : 0,
+    "advance-options"   : 1,
     "extra-properties"  : 0,
     "readonly"          : 0,
     "readonly-mixed"    : 0,
@@ -701,7 +701,7 @@ and [[{"value": "readonly", "readonly":true}]]
   tagified["advance-options"] && (function(){
   var input = document.querySelector('input[name=tags3]'),
       tagify = new Tagify(input, {
-          pattern             : /^.{0,20}$/,  // Validate typed tag(s) by Regex. Here maximum chars length is defined as "20"
+          pattern             : /^[A-Za-z_✲ ]{1,15}$/,  // Validate typed tag(s) by Regex. Here maximum chars length is defined as "20"
           delimiters          : ", ",         // add new tags when a comma or a space character is entered
           maxTags             : 6,
           blacklist           : ["fuck", "shit", "pussy"],
@@ -711,7 +711,12 @@ and [[{"value": "readonly", "readonly":true}]]
           dropdown : {
               enabled: 0,
               position: 'text'
-          }
+          },
+          validate(item) {
+            if( item.value.includes(' ') )
+                return true;
+            return "Invalid - no space"
+        }
       })
 
   // generate a random color (in HSL format, which I like to use)
